schedule section - fixed responsive bug on smallest screen

--- a/Project-01/styles/media-queries.css
+++ b/Project-01/styles/media-queries.css
@@ -1,8 +1,56 @@
 /* Media queries */
+ @media (max-width: 480px) {
+    .schedule-container .tabs {
+        flex-direction: column;
+    }
+
+    .section {
+        padding: 4em 2em;
+    }
+}
+
+@media (min-width: 480px) {
+    .schedule-container .tabs {
+        flex-direction: column;
+    }
+
+    .section {
+        padding: 4em 2em;
+    }
+}
+
+
 @media (max-width: 768px) {
     .cta-button {
-        padding: 1em 2em;
-    };
+        padding: 1em;
+        font-size: var(--font-size-lg)
+    }
+
+    .event-details>h3 {
+        font-size: var(--font-size-lg)
+    }
+}
+
+@media (min-width: 768px) {
+    .event-details>h3 {
+        font-size:var(--font-size-2xl)
+    }
+
+    .section {
+        padding: 4em 6em;
+    }
+
+    .schedule-container .tabs {
+        flex-direction: row;
+    }
+
+    .schedule-container .tab:nth-child(1) {
+        border-radius: 2em 0 0 2em;
+    }
+
+    .schedule-container .tab:nth-child(3) {
+        border-radius: 0 2em 2em 0;
+    }
 }
 
 @media (min-width: 1024px) {}
