--- a/Project-01/styles/style.css
+++ b/Project-01/styles/style.css
@@ -18,7 +18,8 @@
     --font-size-2xl: 1.5rem;
     --font-size-3xl: 2rem; */
 
-    --font-size-sm: 0.875rem;
+    --font-size-xs: 0.875rem;
+    --font-size-sm: 0,7rem;
     --font-size-base: 1.2rem;
     --font-size-lg: 1.5rem;
     --font-size-xl: 1.8rem;
@@ -78,6 +79,7 @@ body {
     background-color: var(--base-color);
     color: var(--text-color);
     transition: all 0.3s ease-in-out;
+    box-sizing: border-box;
 }
 
 section {
@@ -203,14 +205,8 @@ main {
     gap: var(--space-xs);
 }
 
-.section-title {}
-
 h1 {
     font-size: 5rem;
-}
-
-h2, h3 {
-    font-size: 2rem;
 }
 
 .text-white {
@@ -223,21 +219,41 @@ h2, h3 {
 
 .gradient-text {
     background-image: linear-gradient(to right, var(--accent-color-light), var(--accent-color));
-        /* Gradient idzie od koloru pomarańczowego (#ff7e5f) do brzoskwiniowego (#feb47b) */
-    
-        /* 2. KLUCZOWE: Przycinanie tła do kształtu tekstu */
-        -webkit-background-clip: text;
-        background-clip: text;
-    
-        /* 3. Ustawienie koloru tekstu na przezroczysty */
-        -webkit-text-fill-color: transparent;
-        color: transparent;
-        /* Dla większej kompatybilności */
-    
-        /* Dodatkowe style dla lepszego efektu */
-        font-weight: bold;
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    color: transparent;
+    font-weight: bold;
 }
 
 .empty {
     min-height: 3000px;
+}
+
+.section {
+    display: flex;
+    flex-direction: column;
+    padding-top: 6em;
+    align-items: center;
+    max-width: 1560px;
+    flex-wrap: wrap;
+    width: 100%;
+    margin: 0 auto;
+    box-sizing: border-box;
+}
+
+.section-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 2em;
+    font-size: var(--font-size-lg);
+}
+
+.section h2 {
+    font-size: 4rem;
+    float: left;
+    display: block;
+    text-align: center;
+    flex-grow: 1;
 }
